# fcp

./: .gitignore  Cargo.toml  Config.toml  justfile
.github/workflows/: ci.yml
src/: clip.rs  error.rs  exif.rs  extensions.rs  index.rs  lib.rs  utils.rs
src/cli/: cli.rs  tagger.rs
tests/: sample_images.rs
