[package]
name = "fcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fcp"
path = "src/cli/cli.rs"

[features]
debug = ["dep:console-subscriber", "tokio/tracing"]
embed-models = ["dep:rust-embed"]

[dependencies]
anyhow = "1"
blake3 = { version = "1", features = ["rayon"] }
bon = "3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
console-subscriber = { version = "0.5.0", features = ["parking_lot"], optional = true }
csv = "1"
deadpool = { version = "0.13.0", features = ["managed"] }
derive_more = { version = "2", features = ["display", "from", "unwrap", "from_str"] }
ecow = { version = "0.2.5", features = ["serde"] }
enclose = "1"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
# gpui = "0.2"
hf-hub = { version = "0.5.0", features = ["rustls-tls", "ureq"], default-features = false }
image = "0.25.6"
indicatif = "0.18.0"
jiff = "0.2.12"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls", "rocm"] }
pumps = "0.1.1"
rayon = "1"
rexiv2 = "0.10"
rust-embed = { version = "8", features = ["compression"], optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "io-uring"] }
tracing = "0.1.40"
tracing-chrome = { version = "0.7" }
tracing-indicatif = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
