[package]
name = "fcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fcp"
path = "src/cli/cli.rs"

[features]
debug = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "1"
blake3 = { version = "1", features = ["rayon"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
console-subscriber = { version = "0.5.0", features = ["parking_lot"], optional = true }
csv = "1"
derive_more = { version = "2", features = ["display", "from", "unwrap", "from_str"] }
dirs = "6"
ecow = { version = "0.2.5", features = ["serde"] }
enclose = "1"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
indicatif = "0.18.0"
nom-exif = { version = "3", features = ["tokio"] }
pumps = "0.1.1"
rkyv = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "io-uring"] }
tracing = "0.1.40"
tracing-chrome = { version = "0.7" }
tracing-indicatif = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[profile.release]
codegen-units = 1
lto = "fat"
